--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,4 +10,4 @@
 <div class="actions"><%= submit_tag "Log In" %></div>
 <br>
 
-<%= button_to "Sign In with GHIN", "/auth/vendor", method: :post, style: "background-color:#4CAF50" %>
+<%= button_to "Sign In with GHIN", "/auth/vendor?scope=read", method: :post, style: "background-color:#4CAF50" %>
