--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Vendors App</h1>
+<!-- <h1>Vendors App</h1>
 <div class="field">
   <%= label_tag :name %><br />
   <%= text_field_tag :name, params[:name] %>
@@ -11,3 +11,6 @@
 <br>
 
 <%= button_to "Sign In with GHIN", "/auth/vendor", method: :post, style: "background-color:#4CAF50" %>
+-->
+
+<%= render 'header' %>
