--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,47 +1,39 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
 <body>
-    <div class="container">
-        <div class="row">
-			<div class="col-md-5 mx-auto">
-			<div id="first">
-				<div class="myform form ">
-					 <div class="logo mb-3">
-						 <div class="col-md-12 text-center">
-							<h1>Sample App</h1>
-						 </div>
-					</div>
-           <form action="/auth/vendor" method="post" name="login">
-                   <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" name="email"  class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-                   </div>
-                   <div class="form-group">
-                      <label for="exampleInputEmail1">Password</label>
-                      <input type="password" name="password" id="password"  class="form-control" aria-describedby="emailHelp" placeholder="Enter Password">
-                   </div>
-                   <div class="col-md-12 text-center ">
-                      <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Login</button>
-                   </div>
-                   <div class="col-md-12 ">
-                      <div class="login-or">
-                         <hr class="hr-or">
-                         <span class="span-or">or</span>
-                      </div>
-                      <div class="col-md-12 text-center ">
-                        <%= button_to "Sign In with GHIN", "/auth/vendor", method: :post, class: "btn btn-block mybtn btn-primary tx-tfm"%> 
-                      </div>
-                   </div>
-                          
-			</div>
-		</div>
-      </div>   
-         
+  <div class="container" style="margin-top: 100px">
+    <div class="row">
+      <div class="col-md-5 mx-auto">
+        <div id="first" style="background-color: #EFF0F2">
+          <div class="myform form" style="padding: 30px">
+            <div class="logo mb-3">
+              <div class="col-md-12 text-center" style="margin-bottom: 50px">
+                <h1>Sample App</h1>
+              </div>
+            </div>
+            <form action="/auth/vendor" method="post" name="login">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email Address</label>
+                <input type="email" name="email"  class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email address">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Password</label>
+                <input type="password" name="password" id="password"  class="form-control" aria-describedby="emailHelp" placeholder="Enter password">
+              </div>
+              <div class="col-md-12 text-center ">
+                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm" style="border-radius: 20px">Sign In</button>
+              </div>
+              <div class="col-md-12 ">
+                <div class="login-or" style="text-align: center; margin-bottom: 1rem">
+                  <hr class="hr-or">
+                  <span class="span-or">or</span>
+                </div>
+                <div class="col-md-12 text-center" style="padding: 0px">
+                  <%= button_to "Sign In with GHIN", "/auth/vendor", method: :post, class: "btn btn-block mybtn btn-primary tx-tfm", style: "background-color: #cc233c; border-color: #cc233c; border-radius: 20px;"%> 
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
