--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -19,7 +19,7 @@
                 <input type="password" name="password" id="password"  class="form-control" aria-describedby="emailHelp" placeholder="Enter password">
               </div>
               <div class="col-md-12 text-center ">
-                <button class=" btn btn-block mybtn btn-primary tx-tfm" style="border-radius: 20px" disabled="true">Sign In</button>
+                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm" style="border-radius: 20px">Sign In</button>
               </div>
               <div class="col-md-12 ">
                 <div class="login-or" style="text-align: center; margin-bottom: 1rem">
