--- a/app/views/pages/authentication_callback.html.erb
+++ b/app/views/pages/authentication_callback.html.erb
@@ -29,8 +29,7 @@ th{
 </head>
 <br>
   <div class="col-md-12 text-center" style="padding-left: 15%;">
-    <%= button_to "Back", "https://fierce-sands-35954.herokuapp.com/", method: :get, class: "btn btn-block mybtn btn-primary tx-tfm", style:" border-radius: 20px; width: 100px;"%> 
-  </div>
+<%= link_to "Back", root_path, class: "btn btn-block mybtn btn-primary tx-tfm", style:" border-radius: 20px; width: 100px;"%>  </div>
 <body>
   <div class="container" style="margin-top: 100px">
     <div class="row">
