add guardian details

--- a/app/views/pages/authentication_callback.html.erb
+++ b/app/views/pages/authentication_callback.html.erb
@@ -46,22 +46,40 @@ th{
      </div>
    </div>
  </div>
-
-<table class="center">
-  <h3 class="ex1">Golfer Details</h3>
-  <br>
-  <tr>
-    <th>GHIN Number</th>
-    <td><%= @ghin_number %></td>
-  </tr>
-  <tr>
-    <th>Name</th>
-    <td><%= @golfer_name %></td>
-  </tr>
-  <tr>
-    <th>H.I.</th>
-    <td><%= @golfer_hi %></td>
-  </tr>
-</table>
+ <%- if @ghin_number.present? %>
+  <table class="center">
+    <h3 class="ex1">Golfer Details</h3>
+    <br>
+    <tr>
+      <th>GHIN Number</th>
+      <td><%= @ghin_number %></td>
+    </tr>
+    <tr>
+      <th>Name</th>
+      <td><%= @golfer_name %></td>
+    </tr>
+    <tr>
+      <th>H.I.</th>
+      <td><%= @golfer_hi %></td>
+    </tr>
+  </table>
+<%- else %>
+  <table class="center">
+    <h3 class="ex1">Guardian Details</h3>
+    <br>
+    <tr>
+      <th>Guardian ID</th>
+      <td><%= @guardian_id %></td>
+    </tr>
+    <tr>
+      <th>Name</th>
+      <td><%= @guardian_name %></td>
+    </tr>
+    <tr>
+      <th>H.I.</th>
+      <td><%= "-" %></td>
+    </tr>
+  </table>
+<%- end %>
 </body>
 </html>
